--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blue_grey">#607D8B</color>
+    <color name="teal">#009688</color>
+    <color name="blue">#2196F3</color>
+    <color name="white">#FFFFFF</color>
 </resources>
