--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <com.example.hao.learnself.date_2019_7_26.GestureLockView
-        android:layout_width="300dp"
-        android:layout_centerHorizontal="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="150dp"
-        android:layout_height="300dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:background="#cccccc" />
 
 </RelativeLayout>
