--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal">#009688</color>
     <color name="blue">#2196F3</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="pointColor">#d4e0eb</color>
+    <color name="pathColor">#5a9ade</color>
+    <color name="circleColor">#e9f1fa</color>
+    <color name="errorPathColor">#ff0000</color>
+    <color name="errorCircleColor">#feedeb</color>
 </resources>
