--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <com.example.hao.learnself.date_2019_7_26.GestureLockView
+        android:id="@+id/gesture_indicator"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        app:circleColor="@android:color/transparent"
+        app:pathColor="@android:color/transparent"
+        app:pointColor="@color/pointColor"
+        app:pointSize="5dp"
+        app:selectPointColor="@color/selectPointColor" />
+
     <TextView
         android:id="@+id/lock_desc"
-        android:textColor="#333333"
-        android:textSize="20sp"
-        android:layout_marginTop="100dp"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gesture_indicator"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="请绘制解锁图案"
+        android:textColor="@color/color_666666"
+        android:textSize="16sp" />
 
     <com.example.hao.learnself.date_2019_7_26.GestureLockView
         android:id="@+id/lock_screen_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@id/lock_desc"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp" />
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        app:pointSize="15dp" />
 
 </RelativeLayout>
