--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,11 @@
     <color name="teal">#009688</color>
     <color name="blue">#2196F3</color>
     <color name="white">#FFFFFF</color>
+    <color name="color_666666">#666666</color>
 
     <color name="pointColor">#d4e0eb</color>
+    <color name="selectPointColor">#5a9ade</color>
+    <color name="errorPointColor">#ff0000</color>
     <color name="pathColor">#5a9ade</color>
     <color name="circleColor">#e9f1fa</color>
     <color name="errorPathColor">#ff0000</color>
