--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,11 +41,11 @@
     <TextView
         android:layout_marginTop="20dp"
         android:background="@color/blue"
-        android:id="@+id/test_click_btn"
+        android:id="@+id/hotfix_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:text="Lock Screen" />
+        android:text="Hot Fix" />
 
 </LinearLayout>
