--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,59 +3,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
     android:orientation="vertical"
+    android:paddingLeft="16dp"
     android:paddingRight="16dp"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_marginTop="20dp"
-        android:background="@color/blue"
         android:id="@+id/annotation_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="Annotation" />
-
-    <TextView
         android:layout_marginTop="20dp"
         android:background="@color/blue"
+        android:gravity="center"
+        android:text="Annotation"
+        android:textColor="@color/white" />
+
+    <TextView
         android:id="@+id/blur_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="Blur" />
-
-    <TextView
         android:layout_marginTop="20dp"
         android:background="@color/blue"
+        android:gravity="center"
+        android:text="Blur"
+        android:textColor="@color/white" />
+
+    <TextView
         android:id="@+id/lock_screen_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="Lock Screen" />
-
-    <TextView
         android:layout_marginTop="20dp"
         android:background="@color/blue"
+        android:gravity="center"
+        android:text="Lock Screen"
+        android:textColor="@color/white" />
+
+    <TextView
         android:id="@+id/hotfix_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:text="Hot Fix" />
-
-    <TextView
         android:layout_marginTop="20dp"
         android:background="@color/blue"
+        android:gravity="center"
+        android:text="Hotfix"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/proxy_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/blue"
+        android:gravity="center"
+        android:text="Proxy"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/activity_lifecycle_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/blue"
+        android:gravity="center"
+        android:text="ActivityLifeCycle"
+        android:textColor="@color/white" />
+
+
+    <TextView
         android:id="@+id/touch_test_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/blue"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:text="Touch Event" />
+        android:text="Touch Event"
+        android:textColor="@color/white" />
 
 </LinearLayout>
