--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,14 @@
         android:text="Touch Event"
         android:textColor="@color/white" />
 
+    <TextView
+        android:id="@+id/animation_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/blue"
+        android:gravity="center"
+        android:text="Animation"
+        android:textColor="@color/white" />
+
 </LinearLayout>
