--- a/app/src/main/res/layout/activity_touch_test.xml
+++ b/app/src/main/res/layout/activity_touch_test.xml
@@ -42,5 +42,15 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
+    <TextView
+        android:layout_marginTop="16dp"
+        android:id="@+id/redraw_btn"
+        android:text="Redraw"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:background="@color/blue"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+
 
 </LinearLayout>
